[package]
name = "pallet-acurast-proxy"
authors = ["Anonymous"]
description = "FRAME pallet template for defining custom runtime logic."
version = "0.1.0"
license = "MIT"
homepage = "https://docs.acurast.com/"
repository = "https://github.com/acurast"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }
log = { version = "0.4.16", default-features = false }

# Substrate
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true, branch = "polkadot-v0.9.41" }
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.41" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.41" }

acurast-common = { path = "../acurast/common", default-features = false }
pallet-acurast-marketplace = { path = "../marketplace", default-features = false}
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.41" }
pallet-xcm = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41"}
xcm = { package = "xcm", git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41"}
xcm-executor = { package = "xcm-executor", git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41"}
xcm-builder = { package = "xcm-builder", git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41"}

[dev-dependencies]
serde = { version = "1.0.132" }
# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0" }
rand = "0.8.5"

frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.41" }

xcm-simulator = { package = "xcm-simulator", git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41"}
pallet-assets = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.41" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41"}
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41"}
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.41"}
parachain-info = { git = "https://github.com/paritytech/cumulus", default-features = false, branch = "polkadot-v0.9.41" }

pallet-acurast = { path = "../acurast", default-features = false }
pallet-acurast-assets-manager = { path = "../assets-manager", default-features = false }

hex-literal = "0.3.4"

[features]
default = ["std"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"pallet-acurast-marketplace/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
]
std = [
	"codec/std",
	"scale-info/std",
	"log/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"acurast-common/std",
	"pallet-acurast-marketplace/std",
	"pallet-timestamp/std",
	"pallet-xcm/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
	"parachain-info/std",
	"pallet-assets/std"
]
try-runtime = [ "frame-support/try-runtime" ]
